changet site title

--- a/url_shortener/templates/url_shortener/index.html
+++ b/url_shortener/templates/url_shortener/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>URL Shortener</title>
     <link rel="stylesheet" href="{% static 'url_shortener/css/index.css' %}">
 </head>
 <body>
